// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ExternalButtons/> Snapshot renders without crashing using mount 1`] = `
.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: .75rem 1.25rem;
  cursor: pointer;
}

.c1 > *:not(:last-child) {
  padding-right: 0.25em;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: .75rem 1.25rem;
  cursor: pointer;
}

.c2 > *:not(:last-child) {
  padding-right: 0.25em;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-top: 1.5em;
  font-size: 1.25em;
}

.c0 > * {
  margin-bottom: 0.3em;
}

<ExternalButtons>
  <styled.div>
    <div
      className="c0"
    >
      <UIButton
        id="blog-button"
        label="button.visit_my_blog"
      >
        <styled.button
          onClick={[Function]}
          secondary={false}
        >
          <button
            className="c1"
            onClick={[Function]}
          >
            <span>
              button.visit_my_blog
            </span>
          </button>
        </styled.button>
      </UIButton>
      <UIButton
        id="resume-button"
        label="button.resume"
        onClick={[Function]}
        rightIcon={<FaGoogleDrive />}
        secondary={true}
      >
        <styled.button
          onClick={[Function]}
          secondary={true}
        >
          <button
            className="c2"
            onClick={[Function]}
          >
            <span>
              button.resume
            </span>
            <FaGoogleDrive>
              <IconBase
                attr={
                  Object {
                    "viewBox": "0 0 512 512",
                  }
                }
              >
                <svg
                  fill="currentColor"
                  height="1em"
                  stroke="currentColor"
                  strokeWidth="0"
                  style={
                    Object {
                      "color": undefined,
                    }
                  }
                  viewBox="0 0 512 512"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M339 314.9L175.4 32h161.2l163.6 282.9H339zm-137.5 23.6L120.9 480h310.5L512 338.5H201.5zM154.1 67.4L0 338.5 80.6 480 237 208.8 154.1 67.4z"
                    key="0"
                  />
                </svg>
              </IconBase>
            </FaGoogleDrive>
          </button>
        </styled.button>
      </UIButton>
    </div>
  </styled.div>
</ExternalButtons>
`;

exports[`<ExternalButtons/> Snapshot renders without crashing using render 1`] = `
.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: .75rem 1.25rem;
  cursor: pointer;
}

.c1 > *:not(:last-child) {
  padding-right: 0.25em;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: .75rem 1.25rem;
  cursor: pointer;
}

.c2 > *:not(:last-child) {
  padding-right: 0.25em;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-top: 1.5em;
  font-size: 1.25em;
}

.c0 > * {
  margin-bottom: 0.3em;
}

<div
  class="c0"
>
  <button
    class="c1"
  >
    <span>
      button.visit_my_blog
    </span>
  </button>
  <button
    class="c2"
  >
    <span>
      button.resume
    </span>
    <svg
      fill="currentColor"
      height="1em"
      stroke="currentColor"
      stroke-width="0"
      viewBox="0 0 512 512"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M339 314.9L175.4 32h161.2l163.6 282.9H339zm-137.5 23.6L120.9 480h310.5L512 338.5H201.5zM154.1 67.4L0 338.5 80.6 480 237 208.8 154.1 67.4z"
      />
    </svg>
  </button>
</div>
`;

exports[`<ExternalButtons/> Snapshot renders without crashing using shallow 1`] = `
<styled.div>
  <UIButton
    id="blog-button"
    label="button.visit_my_blog"
  />
  <UIButton
    id="resume-button"
    label="button.resume"
    onClick={[Function]}
    rightIcon={<FaGoogleDrive />}
    secondary={true}
  />
</styled.div>
`;
